logs/pypsdier.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pypsdier-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pypsdier'...
Compiling './lib/python3.5/site-packages/pypsdier/__init__.py'...
***   File "./lib/python3.5/site-packages/pypsdier/__init__.py", line 13
    print ":)"
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypsdier/core'...
Compiling './lib/python3.5/site-packages/pypsdier/core/analysis_library.py'...
***   File "./lib/python3.5/site-packages/pypsdier/core/analysis_library.py", line 13
    print 'Solution not suited for data analysis'
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypsdier/core/export_library.py'...
***   File "./lib/python3.5/site-packages/pypsdier/core/export_library.py", line 10
    print "File %s has been exported as a stylesheet to %s" %(filename, xls_filename)
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypsdier/core/installation_test_library.py'...
***   File "./lib/python3.5/site-packages/pypsdier/core/installation_test_library.py", line 9
    print "pypsdier is properly installed. All test were run successfully."
                                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pypsdier/core/pde_library.py'...
***   File "./lib/python3.5/site-packages/pypsdier/core/pde_library.py", line 76
    print "Something went awfully bad in eval_E(E,t)"
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pypsdier/core/seed_library.py'...
***   File "./lib/python3.5/site-packages/pypsdier/core/seed_library.py", line 15
    print params["SimulationFile"]
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypsdier/examples'...
Compiling './lib/python3.5/site-packages/pypsdier/examples/seed_handler.py'...
***   File "./lib/python3.5/site-packages/pypsdier/examples/seed_handler.py", line 20
    print "\nFile not found: %s\n" %args[0]
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
